<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.lakeview.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            style="@style/Divider"/>

        <TextView
            style="@style/Descripton"
            android:background="@android:color/holo_red_dark"
            android:text="@string/slogan"
            android:textColor="@android:color/white"
            android:textStyle="italic"/>

        <TextView
            style="@style/Divider"/>

        <TextView
            style="@style/TitleCaption"
            android:background="@android:color/white"
            android:text="@string/neighborhoods_within_the_neighborhood"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <TextView
            style="@style/Divider"/>

        <LinearLayout
            android:id="@+id/wriggleyville"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TitleCaption"
                android:text="@string/wrigleyville" />
            <ImageView
                style="@style/ImageView"
                android:src="@drawable/wriggleyville" />


        </LinearLayout>

        <TextView
            style="@style/Divider"/>

        <LinearLayout
            android:id="@+id/boystown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TitleCaption"
                android:text="@string/boystown" />

            <ImageView
                style="@style/ImageView"
                android:src="@drawable/boystown" />

        </LinearLayout>

        <TextView
            style="@style/Divider"/>

        <LinearLayout
            android:id="@+id/lakeview_east"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TitleCaption"
                android:text="@string/lakeview_east" />

            <ImageView
                style="@style/ImageView"
                android:src="@drawable/lakeview_east" />
        </LinearLayout>
        <TextView
            style="@style/Divider"/>
        <TextView
            style="@style/TitleCaption"
            android:text="@string/more"
            android:background="@android:color/holo_red_light"
            android:id="@+id/more"/>

    </LinearLayout>

</ScrollView>